[gd_scene load_steps=2 format=3 uid="uid://sx8ashtsf5g4"]

[ext_resource type="Script" path="res://scripts/enemy_spawner.gd" id="1_xdw2v"]

[node name="enemy_spawner" type="Node2D"]
script = ExtResource("1_xdw2v")

[node name="spawn_positions" type="Node2D" parent="."]

[node name="spawnpos0" type="Marker2D" parent="spawn_positions"]
position = Vector2(1350, 50)

[node name="spawnpos1" type="Marker2D" parent="spawn_positions"]
position = Vector2(1350, 125)

[node name="spawnpos2" type="Marker2D" parent="spawn_positions"]
position = Vector2(1350, 275)

[node name="spawnpos3" type="Marker2D" parent="spawn_positions"]
position = Vector2(1350, 360)

[node name="spawnpos4" type="Marker2D" parent="spawn_positions"]
position = Vector2(1350, 450)

[node name="spawnpos5" type="Marker2D" parent="spawn_positions"]
position = Vector2(1350, 600)

[node name="spawnpos6" type="Marker2D" parent="spawn_positions"]
position = Vector2(1350, 675)

[node name="multiple_enemy_timer" type="Timer" parent="."]

[node name="path_timer" type="Timer" parent="."]
